# cwispr

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  todo.txt
include/: device_utils.h  logger.h  worker.h
src/: device_utils.cpp  logger.cpp  main-trayappinprogress.cpp  main.cpp  message_thread.cpp  network.cpp  worker.cpp
